@@ -133,7 +133,13 @@ module.exports = ( spectools ) => {
                 let regex_obj = comp_regex[ type_path ];
 
                 if ( !regex_obj ) {
-                    regex_obj = new RegExp( regex );
+                    try {
+                        regex_obj = new RegExp( regex );
+                    } catch ( e ) {
+                        as.error( InternalError,
+                            `${type_path}: ${e.message}` );
+                    }
+
                     comp_regex[ type_path ] = regex_obj;
                 }
 
